# carise

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
include/utility/: array.h  benchmark.h  dynarray.h  function_pointer.h  iterator_base.h  logger.h  resource_pool.h  smart_pointer.h  util.h
src/: CMakeLists.txt  main.cpp
src/utility/: benchmark.cpp  logger.cpp  logger.hpp
